--- a/style.css
+++ b/style.css
@@ -24,8 +24,6 @@ header{background: url('img/headerbg.jpg') center/cover;}
 }
 .slider-text1{
     opacity: 0.851;
-    width: 780px;
-    height: 145px;
     font-size: 16px;
     line-height: 30px;
     color: #ffffff;
@@ -87,14 +85,14 @@ font-family: "Roboto";
     scale: 1.2;
 }
 .form-cs{
-    width:30vw;
+    width:100%;
     
     border-radius: 0;
     border:1px solid #e5e5e5;
     color:#e5e5e5;
 }
 .form-cs1{
-    width:15vw;
+    width:100%;
     color:#6bc1f1;
     border:1px solid #6bc1f1;
 }
